CSCEXAM-1400 New error view for external visiting students
- in case of unknown computer used for login redirect to new view